--- a/css/scroll.css
+++ b/css/scroll.css
@@ -34,8 +34,6 @@ li {
   color: #fff;
 }
 #wrapper #cont_2 {
-  top: 0%;
-  /* top:100%; */
   background: #fff;
   transition: top 1s;
 }
@@ -43,11 +41,10 @@ li {
   display: flex;
   align-items: flex-start;
   position: absolute;
-  height: 300px;
-  top: calc(50% - 150px);
-  left: 10vw;
   background: #eee;
   transition: transform 0.3s;
+  width: 100%;
+  height: 100%;
 }
 #wrapper #cont_2 #slider li {
   flex: none;
@@ -60,21 +57,11 @@ li {
   aspect-ratio: 1/1;
   margin: 0 200px 0 0;
   background: slategray;
-  border: 2px solid black;
   transition: transform 0.2s;
-}
-#wrapper #cont_2 #slider li:nth-child(2n) {
-  top: -30%;
-}
-#wrapper #cont_2 #slider li:nth-child(3n) {
-  top: 30%;
 }
 #wrapper #cont_2 #slider li div {
   position: relative;
   z-index: 5;
-  width: calc(100% - 4rem);
-  height: calc(100% - 4rem);
-  background: rgba(255, 255, 255, 0.5);
 }
 #wrapper #cont_2 #slider li .redSpan {
   display: block;
@@ -90,10 +77,9 @@ li {
 }
 #wrapper #cont_2 #indicator {
   position: absolute;
-  left: 50%;
-  bottom: 10%;
-  transform: translateX(-50%);
-  width: 80%;
+  left: 0;
+  bottom: 0;
+  width: 100%;
   height: 10px;
   background: #eee;
   border: 1px solid #ccc;
