--- a/css/scroll.scss
+++ b/css/scroll.scss
@@ -18,18 +18,16 @@ li{list-style:none;}
         font-size:10vw;color:#fff;
     }
     #cont_2{
-        top:0%;
-        /* top:100%; */
         background:#fff;
         transition:top 1s;
         #slider{
             display:flex;
             align-items:flex-start;
             position:absolute;
-            height:300px;
-            top:calc(50% - 150px); left:10vw;
             background:#eee;
             transition:transform .3s;
+            width: 100%;
+            height: 100%;
             li{
                 flex:none;
                 display:flex;
@@ -39,14 +37,9 @@ li{list-style:none;}
                 aspect-ratio:1/1;
                 margin:0 200px 0 0;
                 background:slategray;
-                border:2px solid black;
                 transition:transform .2s;
-                &:nth-child(2n){top:-30%;}
-                &:nth-child(3n){top:30%;}
                 div{
                     position:relative;z-index:5;
-                    width:calc(100% - 4rem);height:calc(100% - 4rem);
-                    background:rgba(255,255,255,.5);
                 }
                 .redSpan{
                     display:block;position:absolute;
@@ -61,9 +54,10 @@ li{list-style:none;}
         }
         #indicator{
             position:absolute;
-            left:50%;bottom:10%;
-            transform:translateX(-50%);
-            width:80%; height:10px;
+            left:0;
+            bottom:0;
+            width:100%;
+            height:10px;
             background:#eee;
             border:1px solid #ccc;
             #indi_bar{
