가로스크롤 틀 완성

--- a/css/scroll.scss
+++ b/css/scroll.scss
@@ -1,76 +1,44 @@
-*{margin:0;padding:0;box-sizing:border-box;}
-li{list-style:none;}
-/*  */
-#wrapper{
-    position:relative; overflow:hidden;
-    width:100%;height:100vh;
-    background:#000;
-    .cont{
-        position:absolute; overflow:hidden;
-        width:100%;height:100vh;
-        left:0;
-    }
-    #cont_1{
-        display:flex;flex-wrap:wrap;
-        justify-content:center;align-items:center;
-        top:0;
-        background:salmon;
-        font-size:10vw;color:#fff;
-    }
-    #cont_2{
-        background:#fff;
-        transition:top 1s;
-        #slider{
-            display:flex;
-            align-items:flex-start;
-            position:absolute;
-            background:#eee;
-            transition:transform .3s;
-            width: 100%;
-            height: 100%;
-            li{
-                flex:none;
-                display:flex;
-                justify-content:center;align-items:center;
-                position:relative; overflow:hidden;
-                height:100%;
-                aspect-ratio:1/1;
-                margin:0 200px 0 0;
-                background:slategray;
-                transition:transform .2s;
-                div{
-                    position:relative;z-index:5;
-                }
-                .redSpan{
-                    display:block;position:absolute;
-                    left:0;top:0;
-                    width:10px;height:10px;
-                    background:salmon;
-                    border-radius:50%;
-                    transform:scale(.1);
-                    transition:all .8s;
-                }
-            }
-        }
-        #indicator{
-            position:absolute;
-            left:0;
-            bottom:0;
-            width:100%;
-            height:10px;
-            background:#eee;
-            border:1px solid #ccc;
-            #indi_bar{
-                position:absolute;
-                left:0;top:0;
-                height:100%;width:100%;
-                background:rgba(0,0,0,.5);
-                clip-path:polygon(0% 0%, 10px 0%, 10px 100%, 0% 100%);
-                transition:all .2s;
-            }
-        }
-         
-    }
+*{
+    margin: 0;
+    padding: 0;
 }
-
-
+body{
+    overflow-y: hidden;
+}
+.container{
+    width: 100%;
+    height: 100vh;
+    border: 1px solid red;
+}
+.container .wrap{
+    display: flex;
+    overflow-x: scroll;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+.container .box{
+    width: 100vw;
+    height: 100vh;
+    border: 1px solid black;
+    background-color: antiquewhite;
+}
+/* .container .box p{
+    transform: rotate(90deg);
+    transform-origin: 100% 0;
+} */
+.container .box1{
+    background-color: rgb(250, 225, 193);
+}
+.container .box2{
+    background-color: rgb(243, 210, 166);
+}
+.container .box3{
+    background-color: rgb(250, 197, 128);
+}
+.container .box4{
+    background-color: rgb(255, 185, 93);
+}
+.container .box5{
+    background-color: rgb(253, 154, 25);
+}
