--- a/css/scroll.css
+++ b/css/scroll.css
@@ -1,96 +1,53 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
 
-li {
-  list-style: none;
+body {
+  overflow-y: hidden;
 }
 
-/*  */
-#wrapper {
-  position: relative;
-  overflow: hidden;
+.container {
   width: 100%;
   height: 100vh;
-  background: #000;
+  border: 1px solid red;
 }
-#wrapper .cont {
+
+.container .wrap {
+  display: flex;
+  overflow-x: scroll;
   position: absolute;
-  overflow: hidden;
-  width: 100%;
+  top: 0;
+  left: 0;
+}
+
+.container .box {
+  width: 100vw;
   height: 100vh;
-  left: 0;
+  border: 1px solid black;
+  background-color: antiquewhite;
 }
-#wrapper #cont_1 {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  top: 0;
-  background: salmon;
-  font-size: 10vw;
-  color: #fff;
+
+/* .container .box p{
+    transform: rotate(90deg);
+    transform-origin: 100% 0;
+} */
+.container .box1 {
+  background-color: rgb(250, 225, 193);
 }
-#wrapper #cont_2 {
-  background: #fff;
-  transition: top 1s;
+
+.container .box2 {
+  background-color: rgb(243, 210, 166);
 }
-#wrapper #cont_2 #slider {
-  display: flex;
-  align-items: flex-start;
-  position: absolute;
-  background: #eee;
-  transition: transform 0.3s;
-  width: 100%;
-  height: 100%;
+
+.container .box3 {
+  background-color: rgb(250, 197, 128);
 }
-#wrapper #cont_2 #slider li {
-  flex: none;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  overflow: hidden;
-  height: 100%;
-  aspect-ratio: 1/1;
-  margin: 0 200px 0 0;
-  background: slategray;
-  transition: transform 0.2s;
+
+.container .box4 {
+  background-color: rgb(255, 185, 93);
 }
-#wrapper #cont_2 #slider li div {
-  position: relative;
-  z-index: 5;
-}
-#wrapper #cont_2 #slider li .redSpan {
-  display: block;
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 10px;
-  height: 10px;
-  background: salmon;
-  border-radius: 50%;
-  transform: scale(0.1);
-  transition: all 0.8s;
-}
-#wrapper #cont_2 #indicator {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 10px;
-  background: #eee;
-  border: 1px solid #ccc;
-}
-#wrapper #cont_2 #indicator #indi_bar {
-  position: absolute;
-  left: 0;
-  top: 0;
-  height: 100%;
-  width: 100%;
-  background: rgba(0, 0, 0, 0.5);
-  clip-path: polygon(0% 0%, 10px 0%, 10px 100%, 0% 100%);
-  transition: all 0.2s;
+
+.container .box5 {
+  background-color: rgb(253, 154, 25);
 }/*# sourceMappingURL=scroll.css.map */
